# Product_listings

./: .gitignore  PLAN.md  build.bat  check_git.py  commit_and_push.py  debug_captcha.py  interactive_debug.py  launcher.py  push.bat  push_output.txt  pyproject.toml  requirements.txt  rthook_torch.py  run.bat  simple_test.py  split_performance_analysis.md  test_cache.py  test_captcha_logic.py  test_cluster_performance.py  test_diagnostic.py  test_extractor_load.py  test_model_load.py  test_model_load_detailed.py  test_open_clip.py  test_optimization.py  test_simple_load.py  test_split_history.py  test_split_performance.py  test_verify.py  yupoo_album_single.html  yupoo_albums_page.html  yupoo_api_test.json  yupoo_scraper.spec  滑块元素.txt
tests/: test_config.py  test_core.py  test_feature_cache.py  test_image_processor.py  test_scraper.py  test_splitter.py  test_uploader.py
yupoo_scraper/: __main__.py  captcha_solver.py  chrome_launcher.py  config.py  downloader.py  image_processor.py  main.py  organizer.py  scraper.py  title_generator.py  uploader.py
yupoo_scraper/gui/: __init__.py  base_worker.py  captcha_settings_dialog.py  dedup_review_dialog.py  dedup_tab.py  feature_store_dialog.py  flow_layout.py  group_widget.py  image_processor_tab.py  main_image_dialog.py  main_window.py  models.py  processor_tab.py  scraper_tab.py  split_dialog.py  thumbnail_widget.py  uploader_tab.py  widgets.py
yupoo_scraper/ml/: __init__.py  deduplicator.py  feature_cache.py  feature_extractor.py  smart_naming.py  split_history.py  splitter.py
